feat: add home page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,54 @@
-<h1>home page</h1>
+<div class="row">
+  <div class="col-md-8 m-auto">
+    <div class="d-flex justify-content-between align-items-center mt-5">
+      <div>
+        <h4><strong>總金額 : <span class="fs-1 text-warning"> $ {{ totalAmount }}</span></strong></h4>
+      </div>
+      <div class="dropdown">
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <strong>類別</strong>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" href="#">家居物業</a></li>
+          <li><a class="dropdown-item" href="#">交通出行</a></li>
+          <li><a class="dropdown-item" href="#">休閒娛樂</a></li>
+          <li><a class="dropdown-item" href="#">餐飲食品</a></li>
+          <li><a class="dropdown-item" href="#">其他</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <ul class="list-group">
+      {{#each records}}
+      <li class="list-group-item list-group-item-dark border-0 rounded my-1">
+        <div class="row">
+          <div class="col-1 d-flex justify-content-center align-items-center">
+            <h3><i class="fa-solid {{ this.categoryId.icon }}"></i></h3>
+          </div>
+          <div class="col-3 d-flex justify-content-center align-items-center">
+            <h5><strong>{{ this.name }}</strong></h5>
+          </div>
+          <div class="col-2 d-flex justify-content-center align-items-center">
+            <h5>{{ this.date }}</h5>
+          </div>
+          <div class="col-2 d-flex justify-content-center align-items-center">
+            <h3>$ {{ this.amount }}</h3>
+          </div>
+          <div class="col-4 d-flex justify-content-end align-items-center">
+            <div><a href="/records/edit/{{ this._id }}" class="btn btn-success mx-2">Edit</a></div>
+            <div>
+              <form action="./records/{{ this.id }}?_method=DELETE" method="POST" style="display: inline;">
+                <button class="btn btn-danger me-5" type="submit">Delete</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </li>
+      {{/each}}
+      <a href="/records/new" class="d-flex flex-column align-items-center btn btn-warning my-2">
+        <h5><strong>新增記帳</strong></h5>
+      </a>
+    </ul>
+  </div>
+</div>
