--- a/views/register.hbs
+++ b/views/register.hbs
@@ -10,8 +10,7 @@
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email"
-            value="{{ email }}">
+          <input type="text" id="email" name="email" class="form-control" placeholder="Enter Email" value="{{ email }}">
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">Password</label>
